[gd_scene load_steps=8 format=2]

[ext_resource path="res://DefenderResources/blueDefenderLeft.png" type="Texture" id=1]
[ext_resource path="res://DefenderResources/redDefenderLeft.png" type="Texture" id=2]
[ext_resource path="res://DefenderResources/Defender.gd" type="Script" id=3]
[ext_resource path="res://DefenderResources/blueDefenderFront.png" type="Texture" id=4]
[ext_resource path="res://DefenderResources/redDefenderFront.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.671014, 17.5949 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.4287, 6.18583 )

[node name="Defender" type="Node2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 3 )

[node name="Offset" type="Node2D" parent="."]
position = Vector2( -2.515, -15.873 )
scale = Vector2( 0.7, 0.8 )

[node name="Left" type="Node2D" parent="Offset"]
visible = false

[node name="LeftRedDefender" type="Sprite" parent="Offset/Left"]
texture = ExtResource( 2 )

[node name="LeftBlueDefender" type="Sprite" parent="Offset/Left"]
texture = ExtResource( 1 )

[node name="DefendBox" type="Area2D" parent="Offset/Left"]
collision_layer = 2
collision_mask = 0

[node name="DefendBox" type="CollisionShape2D" parent="Offset/Left/DefendBox"]
position = Vector2( -24.357, 8.91191 )
shape = SubResource( 1 )
disabled = true

[node name="Front" type="Node2D" parent="Offset"]

[node name="FrontRedDefender" type="Sprite" parent="Offset/Front"]
position = Vector2( 2.263, -5.973 )
texture = ExtResource( 5 )

[node name="FrontBlueDefender" type="Sprite" parent="Offset/Front"]
position = Vector2( 2.263, -5.972 )
texture = ExtResource( 4 )

[node name="DefendBox" type="Area2D" parent="Offset/Front"]
collision_layer = 2
collision_mask = 0

[node name="DefendBox" type="CollisionShape2D" parent="Offset/Front/DefendBox"]
position = Vector2( 0.332718, 13.114 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="DeathBox" type="Area2D" parent="Offset"]
collision_layer = 2
collision_mask = 0

[node name="DeathBox" type="CollisionShape2D" parent="Offset/DeathBox"]
position = Vector2( 0.539772, 4.474 )
shape = SubResource( 2 )
[connection signal="area_entered" from="Offset/Left/DefendBox" to="." method="_on_DefendBox_area_entered"]
[connection signal="area_entered" from="Offset/Front/DefendBox" to="." method="_on_DefendBox_area_entered"]
[connection signal="area_entered" from="Offset/DeathBox" to="." method="_on_DeathBox_area_entered"]
